# led-matrix-zmq-server

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  matryx-zmq.service
.github/workflows/: build.yaml
cmake/: FindRpiRgbLedMatrix.cmake
src/: color_temp.cpp  color_temp.hpp  consts.hpp  control.cpp  control_main.cpp  main.c  main.cpp  messages.h  messages.hpp  pipe_main.cpp  server_main.cpp  virtual_main.cpp
travis/: push_to_docker.bash  push_to_docker.sh
